<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.user.teenjobs.MainActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="numberPassword" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/login"
                android:layout_width="10dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_gravity="left"
                android:gravity="center"
                android:onClick="login"
                android:text="@string/login" />

            <Button
                android:id="@+id/signup"
                android:onClick="sign"
                android:layout_width="10dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_gravity="right"
                android:gravity="center"
                android:text="@string/sign_up" />
        </LinearLayout>

    </LinearLayout>

